package raytracer;

import "proto/util/color_data.proto";

message MaterialData {
  optional string emission_texture = 1;
  optional string ambient_texture = 2;
  optional string diffuse_texture = 3;
  optional string specular_texture = 4;
  optional double shininess = 5 [default = 10];

  optional string identifier = 6;

  optional double reflection_percentage = 7 [default = 0];
  optional double refraction_percentage = 8 [default = 0];
  optional double refraction_index = 9 [default = 1];
}